force-app/main/default/objects/Book_List_Item__c/Book_List_Item__c.object-meta.xml
<CustomObject>
    <label>Book List Item</label>
    <nameField>
        <label>Book List Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Book List Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>