force-app/main/default/objects/Book_List_Item__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <label>Book</label>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Book List Items</relationshipLabel>
    <relationshipName>Book_List_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>