force-app/main/default/objects/Book_List_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chcę przeczytać</fullName>
                <default>true</default>
                <label>Chcę przeczytać</label>
            </value>
            <value>
                <fullName>W trakcie czytania</fullName>
            </value>
            <value>
                <fullName>Przeczytane</fullName>
            </value>
            <value>
                <fullName>Porzucone</fullName>
            </value>
            <value>
                <fullName>Na półce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>