force-app/main/default/objects/Book_List_Item__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Book List Items</relationshipLabel>
    <relationshipName>Book_List_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>